Top-bar visibility issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
 body{
     margin: 0;
     padding: 0;
-    overflow:hidden;
 
 }
+
 .bg-ls-green{
     background-color: rgba(232, 240, 233, 1);
 }
